DuPont DevSB/src/objects/CRM_IT_Project__c.object
<CustomObject>
    <fields>
        <fullName>Architecture_Review_Date__c</fullName>
        <label>Architecture Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_and_Configure__c</fullName>
        <label>Build and Configure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business process review</fullName>
                </value>
                <value>
                    <fullName>Custom code development</fullName>
                </value>
                <value>
                    <fullName>Database access</fullName>
                </value>
                <value>
                    <fullName>Data maintenance</fullName>
                </value>
                <value>
                    <fullName>Data migration</fullName>
                </value>
                <value>
                    <fullName>Data Model Review</fullName>
                </value>
                <value>
                    <fullName>Data readiness</fullName>
                </value>
                <value>
                    <fullName>Data validation</fullName>
                </value>
                <value>
                    <fullName>Develop views, reports, dashboards</fullName>
                </value>
                <value>
                    <fullName>Interfaces, integration</fullName>
                </value>
                <value>
                    <fullName>Key Users</fullName>
                </value>
                <value>
                    <fullName>Leverage environment support</fullName>
                </value>
                <value>
                    <fullName>Mandatory field</fullName>
                </value>
                <value>
                    <fullName>Network access and connectivity</fullName>
                </value>
                <value>
                    <fullName>Object configuration</fullName>
                </value>
                <value>
                    <fullName>Page layout, presentation</fullName>
                </value>
                <value>
                    <fullName>Picklist values</fullName>
                </value>
                <value>
                    <fullName>Pilot configuration</fullName>
                </value>
                <value>
                    <fullName>Review scenarios, use cases</fullName>
                </value>
                <value>
                    <fullName>Role, profile definition</fullName>
                </value>
                <value>
                    <fullName>Security, access, visibility</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Priority__c</fullName>
        <description>The Priority Order with number 1 being highest that has been determined by the Business for their projects.</description>
        <inlineHelpText>1 is highest, 10 is lowest priority as identified by the Business.</inlineHelpText>
        <label>Business Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_IT_Project_ID__c</fullName>
        <description>Number assigned by Salesforce.com when a project is entered</description>
        <displayFormat>CRM-{YYYY}-{MM}-{0000}</displayFormat>
        <inlineHelpText>Auto generated ID for the project.</inlineHelpText>
        <label>CRM IT Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <description>Change management consideration relating to the SFD deploy.</description>
        <label>Change Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business readiness review</fullName>
                </value>
                <value>
                    <fullName>Current - future state process review</fullName>
                </value>
                <value>
                    <fullName>Organizational constraints, barriers</fullName>
                </value>
                <value>
                    <fullName>Timing to delivery</fullName>
                </value>
                <value>
                    <fullName>Deliverables (scope, expectations)</fullName>
                </value>
                <value>
                    <fullName>Phased deliverables (functionality)</fullName>
                </value>
                <value>
                    <fullName>Communication (users, stakeholders)</fullName>
                </value>
                <value>
                    <fullName>Training needs</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Phase__c</fullName>
        <label>Control Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Develop Business Metrics</fullName>
                </value>
                <value>
                    <fullName>Document Adoption Plan</fullName>
                </value>
                <value>
                    <fullName>Review Adoption versus Scope</fullName>
                </value>
                <value>
                    <fullName>Retire Legacy Systems</fullName>
                </value>
                <value>
                    <fullName>Archive Historical Data</fullName>
                </value>
                <value>
                    <fullName>Follow-up Adoption Assessment</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEIS_ID__c</fullName>
        <description>DEIS ID if project is part of an existing DEIS Project</description>
        <inlineHelpText>Enter DEIS ID if project is part of an existing DEIS Project</inlineHelpText>
        <label>DEIS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEIS_Project_Name__c</fullName>
        <description>The official name associated with the DEIS Project.</description>
        <label>DEIS Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEIS_Stage__c</fullName>
        <description>Stage of the project in DEIS (if applicable)</description>
        <label>DEIS Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Pre-Project</fullName>
                </value>
                <value>
                    <fullName>1 - Identify Need</fullName>
                </value>
                <value>
                    <fullName>2 - Research and Evaluate</fullName>
                </value>
                <value>
                    <fullName>3 - Design</fullName>
                </value>
                <value>
                    <fullName>4 - Build</fullName>
                </value>
                <value>
                    <fullName>5 - Launch</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEIS_Status__c</fullName>
        <description>Status of Project in DEIS (where applicable)</description>
        <label>DEIS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <description>Required activities to prepare data for migration</description>
        <inlineHelpText>Required activities to prepare data for migration</inlineHelpText>
        <label>Data Migration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify data resource</fullName>
                </value>
                <value>
                    <fullName>Document migration requirement</fullName>
                </value>
                <value>
                    <fullName>Determine data sources</fullName>
                </value>
                <value>
                    <fullName>Develop data extract process</fullName>
                </value>
                <value>
                    <fullName>Cleanse, eliminate duplicate data</fullName>
                </value>
                <value>
                    <fullName>Format and map data</fullName>
                </value>
                <value>
                    <fullName>Develop data migration template</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Model__c</fullName>
        <label>Data Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Define functionality required</fullName>
                </value>
                <value>
                    <fullName>Identify required fields</fullName>
                </value>
                <value>
                    <fullName>Define picklist values</fullName>
                </value>
                <value>
                    <fullName>Identify new requirements</fullName>
                </value>
                <value>
                    <fullName>Reconcile with data model</fullName>
                </value>
                <value>
                    <fullName>Define maintenance, ownernship</fullName>
                </value>
                <value>
                    <fullName>DM Team Approved</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm Interfaces or Integrations</fullName>
                </value>
                <value>
                    <fullName>Develop Training Material</fullName>
                </value>
                <value>
                    <fullName>SFDC User Access</fullName>
                </value>
                <value>
                    <fullName>Business Key User Training</fullName>
                </value>
                <value>
                    <fullName>Load Data</fullName>
                </value>
                <value>
                    <fullName>Develop Initial Reports and Dashboards</fullName>
                </value>
                <value>
                    <fullName>Validate Data</fullName>
                </value>
                <value>
                    <fullName>Transfer to SFDC Admin Support</fullName>
                </value>
                <value>
                    <fullName>Go-Live Checklist Complete</fullName>
                </value>
                <value>
                    <fullName>Communicate Change Management</fullName>
                </value>
                <value>
                    <fullName>Communicate Escalation Process</fullName>
                </value>
                <value>
                    <fullName>Conduct Initial User Training</fullName>
                </value>
                <value>
                    <fullName>Validate Delivery versus Charter</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>High-level Project Overview or Description of Changes Requested</description>
        <inlineHelpText>High-level Project Overview or Description of Changes Requested</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Process__c</fullName>
        <description>The key steps in defining the capability and delivery of a planned SFDC project.</description>
        <label>Design Process</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current , future state process</fullName>
                </value>
                <value>
                    <fullName>Business process scenarios</fullName>
                </value>
                <value>
                    <fullName>Users use cases</fullName>
                </value>
                <value>
                    <fullName>Current, new reports</fullName>
                </value>
                <value>
                    <fullName>Business process changes</fullName>
                </value>
                <value>
                    <fullName>Business goals, expectations</fullName>
                </value>
                <value>
                    <fullName>Organizational changes</fullName>
                </value>
                <value>
                    <fullName>New roles and definition</fullName>
                </value>
                <value>
                    <fullName>Post deployment support</fullName>
                </value>
                <value>
                    <fullName>Legacy solution retirement</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Business impact</fullName>
                </value>
                <value>
                    <fullName>Leverageable configuration (Type 1)</fullName>
                </value>
                <value>
                    <fullName>Leverage, enable new functions (Type 2)</fullName>
                </value>
                <value>
                    <fullName>Custom code, new configuration (Type 3)</fullName>
                </value>
                <value>
                    <fullName>Workshop:  Introduction, Grounding</fullName>
                    <default>true</default>
                    <label>Workshop:  Introduction, Grounding</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussion__c</fullName>
        <description>Continued Discussion, Impact, Actions, or  Next Steps.</description>
        <inlineHelpText>Discussion, Impact , Actions, or  Next Steps.</inlineHelpText>
        <label>Discussion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effort_Spent__c</fullName>
        <label>Effort Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Stage__c</fullName>
        <label>Engagement Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_and_Architecture__c</fullName>
        <label>Environment and Architecture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project DISO review</fullName>
                </value>
                <value>
                    <fullName>Interface, integration requirements</fullName>
                </value>
                <value>
                    <fullName>Network access and connectivity</fullName>
                </value>
                <value>
                    <fullName>User authorization - role, profile</fullName>
                </value>
                <value>
                    <fullName>Architecture review</fullName>
                </value>
                <value>
                    <fullName>Process and technology alignment</fullName>
                </value>
                <value>
                    <fullName>Sandbox and test preparation</fullName>
                </value>
                <value>
                    <fullName>Test data</fullName>
                </value>
                <value>
                    <fullName>Privacy and SPAM consideration</fullName>
                </value>
                <value>
                    <fullName>Data export,transfer requirements</fullName>
                </value>
                <value>
                    <fullName>Secured data transfer capability</fullName>
                </value>
                <value>
                    <fullName>Backup, recovery plan</fullName>
                </value>
                <value>
                    <fullName>Business continuity plan</fullName>
                </value>
                <value>
                    <fullName>Enhancement approval process</fullName>
                </value>
                <value>
                    <fullName>3rd-party software interfaces</fullName>
                </value>
                <value>
                    <fullName>Extract, transfer, and load utility</fullName>
                </value>
                <value>
                    <fullName>Custom code maintenance</fullName>
                </value>
                <value>
                    <fullName>Escalation process, contacts</fullName>
                </value>
                <value>
                    <fullName>Data ownership, accountability</fullName>
                </value>
                <value>
                    <fullName>CRIM</fullName>
                </value>
                <value>
                    <fullName>Business Key User</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functionality_and_Fit__c</fullName>
        <label>Functionality and Fit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assess functionality versus need</fullName>
                </value>
                <value>
                    <fullName>Identify new functionality</fullName>
                </value>
                <value>
                    <fullName>Identify leverageable functionality</fullName>
                </value>
                <value>
                    <fullName>Document gaps - new configuration</fullName>
                </value>
                <value>
                    <fullName>Document gaps - custom code</fullName>
                </value>
                <value>
                    <fullName>Document  custom requirements</fullName>
                </value>
                <value>
                    <fullName>Develop custom code SOW</fullName>
                </value>
                <value>
                    <fullName>Provide custom code SOW PO#</fullName>
                </value>
                <value>
                    <fullName>Acquire Integrator (DISO, Sourcing)</fullName>
                </value>
                <value>
                    <fullName>Assess options to custom code</fullName>
                </value>
                <value>
                    <fullName>Decide custom code go/no go</fullName>
                </value>
                <value>
                    <fullName>Assess timing of custom code</fullName>
                </value>
                <value>
                    <fullName>Define custom code maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Checklist__c</fullName>
        <description>Work Process Docouments Required for Deployment</description>
        <inlineHelpText>Work Process Docouments Required for Deployment</inlineHelpText>
        <label>Go-Live Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Process Definition</fullName>
                </value>
                <value>
                    <fullName>Configuration Workbook</fullName>
                </value>
                <value>
                    <fullName>Contingency Plan</fullName>
                </value>
                <value>
                    <fullName>Data Migration Plan</fullName>
                </value>
                <value>
                    <fullName>Deployment Manifest</fullName>
                </value>
                <value>
                    <fullName>Entity Relationship Diagram</fullName>
                </value>
                <value>
                    <fullName>Integration Plan</fullName>
                </value>
                <value>
                    <fullName>Key User Training</fullName>
                </value>
                <value>
                    <fullName>Security Model</fullName>
                </value>
                <value>
                    <fullName>Sponsor Signoff</fullName>
                </value>
                <value>
                    <fullName>Technical Documentation</fullName>
                </value>
                <value>
                    <fullName>USAT Completion Signoff</fullName>
                </value>
                <value>
                    <fullName>USAT Testing Scenarios</fullName>
                </value>
                <value>
                    <fullName>User Access Requested</fullName>
                </value>
                <value>
                    <fullName>User Activation Plan</fullName>
                </value>
                <value>
                    <fullName>User Training Plan</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrator_Name__c</fullName>
        <label>Integrator Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <description>A text name of targeted replacement legacy application/system.</description>
        <label>Legacy System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of users added by this project implementation</description>
        <label>Number of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>DSS-AP</fullName>
                </value>
                <value>
                    <fullName>DSS-NA</fullName>
                </value>
                <value>
                    <fullName>IT-CORP</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Concept__c</fullName>
        <description>Describe WHAT solution (and not the HOW) this project will deliver</description>
        <inlineHelpText>Describe WHAT solution (and not the HOW) this project will deliver</inlineHelpText>
        <label>Project Concept</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Details_R__c</fullName>
        <description>Rich Text field for storing pictures, emails, etc.</description>
        <inlineHelpText>Rich Text field that can be used to store pictures, Emails, etc.</inlineHelpText>
        <label>Project Details</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_IT_Environment__c</fullName>
        <label>Project IT Environment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User access -remote, local</fullName>
                </value>
                <value>
                    <fullName>Device upgrades</fullName>
                </value>
                <value>
                    <fullName>Security (access, visibility)</fullName>
                </value>
                <value>
                    <fullName>DISO review</fullName>
                </value>
                <value>
                    <fullName>Data sources</fullName>
                </value>
                <value>
                    <fullName>Data translation, mapping</fullName>
                </value>
                <value>
                    <fullName>Targeted legacy replacement</fullName>
                </value>
                <value>
                    <fullName>Archive legacy history</fullName>
                </value>
                <value>
                    <fullName>Configuration reuse</fullName>
                </value>
                <value>
                    <fullName>Business specific data</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Planning__c</fullName>
        <label>Project Planning</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assess Business Value</fullName>
                </value>
                <value>
                    <fullName>Assess Impact of Change</fullName>
                </value>
                <value>
                    <fullName>Confirm sponsorship, stakeholders</fullName>
                </value>
                <value>
                    <fullName>Identify Business Key User</fullName>
                </value>
                <value>
                    <fullName>Confirm Requirements</fullName>
                </value>
                <value>
                    <fullName>Validate Business Process</fullName>
                </value>
                <value>
                    <fullName>Consider Conceptual Solutions</fullName>
                </value>
                <value>
                    <fullName>Evaluate Technical Options</fullName>
                </value>
                <value>
                    <fullName>Proof of Concept</fullName>
                </value>
                <value>
                    <fullName>Validate scope and deliverables</fullName>
                </value>
                <value>
                    <fullName>Review project plan</fullName>
                    <default>true</default>
                    <label>Review project plan</label>
                </value>
                <value>
                    <fullName>Communication Plan</fullName>
                </value>
                <value>
                    <fullName>Deliver kick-off</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Resources__c</fullName>
        <description>Project participants of the development, deploy phases</description>
        <inlineHelpText>Project participants in the development and deploy phases</inlineHelpText>
        <label>Project Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>BU/Regional IT Leader</fullName>
                </value>
                <value>
                    <fullName>BU SFDC Adminstrator</fullName>
                </value>
                <value>
                    <fullName>Business Key User/SME</fullName>
                </value>
                <value>
                    <fullName>Business Process Owner/SME</fullName>
                </value>
                <value>
                    <fullName>Configurator</fullName>
                </value>
                <value>
                    <fullName>Core/Steering team</fullName>
                </value>
                <value>
                    <fullName>Corporate IT leader</fullName>
                </value>
                <value>
                    <fullName>Corporate  Process Leader</fullName>
                </value>
                <value>
                    <fullName>Data and Data Migration Lead</fullName>
                </value>
                <value>
                    <fullName>DISO Contact</fullName>
                </value>
                <value>
                    <fullName>Engagement Leader</fullName>
                </value>
                <value>
                    <fullName>Integrator (Sourcing Approval Required)</fullName>
                </value>
                <value>
                    <fullName>Key User</fullName>
                </value>
                <value>
                    <fullName>M&amp;S IT Custom Developer</fullName>
                </value>
                <value>
                    <fullName>M&amp;S IT Leader</fullName>
                </value>
                <value>
                    <fullName>Project Leader</fullName>
                </value>
                <value>
                    <fullName>Project SFDC Adminstrator</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_SOW_Support_PO__c</fullName>
        <label>SOW Purchase Order</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <defaultValue>Today()+1</defaultValue>
        <description>Initiation date of project</description>
        <label>Project Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
</CustomObject>